tests/errors/semantic/blocking/INHOMOGENEOUS_MAX.py
# Cannot determine final dtype of 'max' call with arguments of different types
# pylint: disable=missing-function-docstring, missing-module-docstring

a = max(3, 4.5)
